@@ -26,6 +26,10 @@
 			<env key="MAVEN_OPTS" value="-Xmx512m -XX:MaxPermSize=128m"/>
 			<arg line="clean source:jar package site assembly:assembly" />
 		</exec>
+		<exec os="Mac OS X" executable="mvn" failonerror="true">
+			<env key="MAVEN_OPTS" value="-Xmx512m -XX:MaxPermSize=128m"/>
+			<arg line="clean source:jar package site assembly:assembly" />
+		</exec>
 	</target>
 
 	<target name="issuewarnings">
